--- a/aboutus.html
+++ b/aboutus.html
@@ -22,52 +22,29 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-  <style>
-    /* Make the image fully responsive */
-    .carousel-inner img {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+ <link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+    integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 
-  <!-- NAV BAR -->
-
-
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-    <!-- if yu need the text as dark,you need to write navbar light-->
-    <!-- Brand -->
-    <a class="navbar-brand" href="Homepage.html">Techme.com</a>
-
-    <!-- Links -->
-
-    <ul class="navbar-nav ml-auto">
-      <!-- ml stands for Margin left, and if you need contents in right, add left -->
-      <li class="nav-item pt-2">
-        <!-- pt upto 5 only, after tat it becomes auto-->
-        <a class="nav-link" href="Homepage.html">Home</a>
-      </li>
-      <li class="nav-item pt-2">
-        <a class="nav-link" href="aboutus.html">About us</a>
-      </li>
-      <li class="nav-item pt-2">
-        <a class="nav-link" href="service.html">Services</a>
-      </li>
-      <li class="nav-item pt-2">
-        <a class="nav-link" href="gallery.html">Gallery</a>
-      </li>
-      <li class="nav-item pt-2">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-      <!-- search button on nav-->
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <form class="form-inline" action="/action_page.php">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-success" type="submit">Search</button>
-        </form>
-      </nav>
-    </ul>
-  </nav>
+    <div>
+      <header id="nav-wrap">
+        <div id="logo">
+            <a href="home.html">
+                <img src="logo.png" id="title" alt="Techme Logo">
+            </a>
+        </div>
+        <div id="navbar">
+            <a class="nav-link original-hover" href="service.html">Daily News</a>
+            <a class="nav-link original-hover" href="gallery.html">Gallery</a>
+            <a class="nav-link original-hover" href="contact.html">Contact</a>
+            <a class="nav-link original-hover" href="aboutus.html">About Us</a>
+        </div>
+    </header>
 
   <!-- NAV BAR ends here --->
 
@@ -158,74 +135,22 @@
       padding-bottom: 30px;
     }
   </style>
+ <footer>
+      <div id="contact" class="middle">
+          <h1>Contacts</h1>
+          <div id="contact-icons" class="middle">
+              <a href="https://www.facebook.com/" class="icon" title="Facebook">
+                  <i class="fab fa-5x fa-facebook"></i>
+              </a>
+              <a href="https://learn.freecodecamp.org/" class="icon" title="Free Code Camp"><i
+                      class="fab fa-5x fa-free-code-camp"></i></a>
+              <a href="https://mail.google.com/mail/u/0/#inbox" class="icon" title="Gmail"><i
+                      class="fas fa-5x fa-envelope"></i></a>
 
-  <div class="footer">
-    <p>All rights reserved. Copyright 2020</p>
-    <!-- social media buttons inside my footer -->
-
-    <!-- css code for social media -->
-    <style>
-      .fa {
-        padding: 15px;
-        font-size: 20px;
-        width: 60px;
-        text-align: center;
-        text-decoration: none;
-        margin: 5px 5px;
-      }
-
-      .fa:hover {
-        opacity: 0.7;
-      }
-
-      .fa-facebook {
-        background: #3B5998;
-        color: white;
-      }
-
-      .fa-twitter {
-        background: #55ACEE;
-        color: white;
-      }
-
-      .fa-google {
-        background: #dd4b39;
-        color: white;
-      }
-
-      .fa-linkedin {
-        background: #007bb5;
-        color: white;
-      }
-
-      .fa-youtube {
-        background: #bb0000;
-        color: white;
-      }
-
-      .fa-instagram {
-        background: #125688;
-        color: white;
-      }
-
-
-      .fa-skype {
-        background: #00aff0;
-        color: white;
-      }
-
-
-      .fa-dribbble {
-        background: #ea4c89;
-        color: white;
-      }
-    </style>
-
-    <!-- html code for social media -->
-      <a href="https://www.facebook.com/gnuhcuhp" class="fa fa-facebook"></a>
-      <a href="https://www.twitter.com/gnuhcuhp" class="fa fa-twitter"></a>
-      <a href="https://www.linkedin.com/in/hung-pham-0841b1b4" class="fa fa-linkedin"></a>
-      <a href="https://www.instagram.com/f_hng" class="fa fa-instagram"></a>
+          </div>
+      </div>
+  </footer>
+ 
 
 
   </div>
