--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div>
     <header id="nav-wrap">
         <div id="logo">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="logo.png" id="title" alt="Techme Logo">
             </a>
         </div>
